--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .hero{
-    background-image: url("/img/heroimg.png");
+    background-image: url("../img/heroimg.png");
     height: 650px;
     background-repeat: no-repeat;
      background-size: cover;
@@ -213,7 +213,7 @@
     padding-top: 50px;
 }
 .whysettle{
-    background-image: url("/img/footerimg.jpg");
+    background-image: url("../img/footerimg.jpg");
     height: 650px;
     background-repeat: no-repeat;
     background-size: cover;
